 * Switched document_upload.pl example for required fields to return
    mime types.

2006-11-14 moj
 * Fixed typo in RoMEO

2006-11-14 moj
 * Added target="_blank" to license + upload help.

2006-11-14 cjg
 * Updated NEWS for beta-2
 * Minor css + javascript tweaks to make things look better in windows.

2006-11-14 cjg
 * Improved help in epadmin

2006-11-14 cjg
 * Removed unused adminemail config option from email.pl
 * Fixed transparency image problems in IE
 * Stopped views being centered
 * Stopped unwanted centering in several places.

2006-11-14 cjg
 * Fixed bug in rmtree when dir doesn't exist if gave a warning!
 * (re)Fixed bug in ordervalues of metafield pagerange.

======================================================================
14/11/2006 - EPRINTS-3.0-beta-2
======================================================================

2006-11-14 cjg
 * Tweaked favicon - could still be better
 * Non existant archiveid now gives a nice error.

2006-11-15 tdb
 * Moved mkdir to EPrints::Platform (#2632)
 * Documented EPrints::Platform
 * Fixed bug in EPrints::EPrint: ->session to ->get_session

2006-11-15 moj
 * Added EPJS_enter_click - clicks a button when enter is pressed in 
    a field.
 * Set reference rows to 15 (also fixes Safari bug)
 * Set subject quicksearch to use the enter javascript

2006-11-15 moj
 * Metafield.pm now uses the noenter input field (enter blocking wasn't working
    on some fields). 

2006-11-15 moj
 * Added $self->{surround} to Component. This is overriden by XHTML and Upload
    to Light and None respectively. Any surround attributes in the workflow files
    override these defaults.
 * Added get_surround to component. This returns the relevant Surround object 
    (Default if none is specified).
 * Tidied the %params bit in Stage.pm a little.

2006-11-15 moj
 * Removed 10_core.pl, database.pl, and archive_name.xml from the repository 
    - they are created by epadmin, and otherwise get in the way when making 
    commits.