@@ -10,7 +10,7 @@
 
 <p>Thank you for your interest in <epc:phrase ref="archive_name" />.</p>
 
-<p>You now need to activate your new password, <epc:pin name="confirmurl">click here</epc:pin>.</p>
+<p>You now need to activate your new password, <epc:pin name="confirmurl">click here</epc:pin>. This will expire in <epc:pin name="maxdelta" />.</p>
 
 <p>Your username is: <epc:pin name="username"/>.</p>
 
